--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nx run-many --target=serve --all --parallel --maxParallel=100",
-    "lint": "nx run-many --target=lint --fix --all --parallel --maxParallel=100"
+    "lint": "nx lint",
+    "lint-all": "nx run-many --target=lint --all --parallel --maxParallel=100"
   },
   "private": true,
   "devDependencies": {
@@ -20,6 +21,8 @@
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^6.1.2",
     "@svgr/webpack": "^7.0.0",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.5.0",
@@ -36,6 +39,7 @@
     "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.5.0",
