--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx run-many --target=serve --all --parallel --maxParallel=100",
-    "lint": "nx lint",
+    "lint": "nx lint --fix",
     "lint-all": "nx run-many --target=lint --all --parallel --maxParallel=100"
   },
   "private": true,
