--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@finlab-frontend/load-remote-module": [
         "libs/load-remote-module/src/index.ts"
-      ]
+      ],
+      "@finlab-frontend/ui": ["libs/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
