--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.5.0",
@@ -47,15 +48,20 @@
     "nx": "15.9.2",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.3",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
+    "classnames": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "urql": "^4.0.0"
   }
 }
