--- a/apps/auth/project.json
+++ b/apps/auth/project.json
@@ -6,7 +6,9 @@
   "targets": {
     "build": {
       "executor": "@nrwl/webpack:webpack",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
@@ -15,11 +17,17 @@
         "baseHref": "/",
         "main": "apps/auth/src/main.ts",
         "tsConfig": "apps/auth/tsconfig.app.json",
-        "assets": ["apps/auth/src/favicon.ico", "apps/auth/src/assets"],
-        "styles": ["apps/auth/src/styles.scss"],
+        "assets": [
+          "apps/auth/src/favicon.ico",
+          "apps/auth/src/assets"
+        ],
+        "styles": [
+          "apps/auth/src/styles.scss"
+        ],
         "scripts": [],
         "isolatedConfig": true,
-        "webpackConfig": "apps/auth/webpack.config.js"
+        "webpackConfig": "apps/auth/webpack.config.js",
+        "postcssConfig": "postcss.config.js"
       },
       "configurations": {
         "development": {
@@ -65,9 +73,13 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/auth/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/auth/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "serve-static": {
@@ -88,7 +100,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/auth/jest.config.ts",
         "passWithNoTests": true
