--- a/apps/work-time/project.json
+++ b/apps/work-time/project.json
@@ -6,7 +6,9 @@
   "targets": {
     "build": {
       "executor": "@nrwl/webpack:webpack",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
@@ -19,10 +21,13 @@
           "apps/work-time/src/favicon.ico",
           "apps/work-time/src/assets"
         ],
-        "styles": ["apps/work-time/src/styles.scss"],
+        "styles": [
+          "apps/work-time/src/styles.scss"
+        ],
         "scripts": [],
         "isolatedConfig": true,
-        "webpackConfig": "apps/work-time/webpack.config.js"
+        "webpackConfig": "apps/work-time/webpack.config.js",
+        "postcssConfig": "postcss.config.js"
       },
       "configurations": {
         "development": {
@@ -68,9 +73,13 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/work-time/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/work-time/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "serve-static": {
@@ -91,7 +100,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/work-time/jest.config.ts",
         "passWithNoTests": true
