--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^29.5.0",
     "cypress": "^12.9.0",
     "eslint": "~8.37.0",
@@ -46,6 +47,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "nx": "15.9.2",
+    "postcss": "8.4.21",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.1",
