--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nrwl/linter": "15.9.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^15.9.2",
+    "@nrwl/rollup": "^15.9.2",
     "@nrwl/web": "15.9.2",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.9.2",
